public interface ICardEffect
{
    void ApplyEffect(GameState gameState);
}
