public class NextTurnEffect : ICardEffect
{
    public void ApplyEffect(GameState gameState)
    {
        return;
    }
}
