public enum RessourceTypes 
{
    Trees,
    Minerals,
    Water, 
    Sun, 
    Oil
}

