public enum TileType
{
    Forests,
    Mountains,
    Lakes,
    Plains,
    Deserts,
    None
}
